	- ADDED: apiScanner.lua for searching unimplemented functions from raylib.

DETAILED CHANGES:
	- ADDED: GetBufferElementSize and GetBufferLength.
	- FIXED: Compress_data example.
	- FIXED: GuiGetFont return lightuserdata.
	- FIXED: GuiSetStyle, GuiLoadStyle and GuiLoadStyleDefault sets state->guiDefaultFont to GuiGetFont.
	- ADDED: TextFindIndex.
	- FIXED: SeekMusicStream was not assigned.

------------------------------------------------------------------------
Release:	ReiLua version 0.7.0		Using Raylib 5.0 and Forked Raygui 4.0
------------------------------------------------------------------------
KEY CHANGES:
	- CHANGE: Switch to Raylib 5.0 and Raygui 4.0.
	- CHANGE: Audio device no longer initialize automatically in case some other device is used.
	- ADDED: More audio device management functions.
	- ADDED: Random values generation functions.
	- ADDED: More Window-related functions.
	- ADDED: Spline functions.
	- CHANGE: Raygui to version 4.0. Gui libs also updated.
	- ADDED: Support for platforms.
	- ADDED: Platform desktop SDL.
	- CHANGE: Renamed event enums. Events are now platform specific.
	- ADDED: SDL Events.
	- ADDED: Experimental GLFW Pen Touch events. Needs glfw PR https://github.com/glfw/glfw/pull/1445.
	- ADDED: Platform specific API documentation generation.
	- ADDED: Platform web.
	- ADDED: Raygui textures with SetShapesTexture.
	- CHANGE: Raygui wrapper library is now object based. Possible to have multiple separated gui systems.
	- ADDED: Raygui wrapper library disabled and styles for each element.
	- ADDED: Files management functions.
	- ADDED: More Model management functions.
	- ADDED: More Model animations management functions.
	- ADDED: 2D lightmap example.
	- ADDED: RLGL Hello triangle example.
	- ADDED: Rest of rlRenderBatch functions.
	- ADDED: DrawTextureNPatchRepeat.
	- ADDED: GuiScrollBar and made it puplic in raygui.h.
	- ADDED: Rest of font loading/unloading functions.
	- CHANGE: GlyphInfo type to userdata.